# npp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
res/: icon.rc
res/icon/: icon16.aseprite  icon32.aseprite  icon64.aseprite
src/: WinTablet.cpp  WinTablet.h  globals.cpp  globals.hpp  main.cpp  wacom_def.h
src/files/: filedialog.cpp  filedialog.hpp  filehandling.cpp  filehandling.hpp  json_handling.cpp  json_handling.hpp
src/graphics/: D2DBitmapAdapter.cpp  D2DBitmapAdapter.hpp  D2DDrawer.cpp  D2DDrawer.hpp  D2DWindow.cpp  D2DWindow.hpp  D3D10Window.cpp  D3D10Window.hpp  ID2DRenderTargetProvider.hpp  TabletDrawer.cpp  TabletDrawer.hpp  TabletWin.cpp  TabletWin.hpp  TestWindow.cpp  TestWindow.hpp  Win32Context.hpp  direct2d_helpers.cpp  direct2d_helpers.hpp
src/graphics/imgui/: ImGuiHandler.cpp  ImGuiHandler.hpp
src/tab/: Tablet.cpp  Tablet.hpp  tablet_handling.cpp  tablet_handling.hpp  tablet_props.cpp  tablet_props.hpp  tablet_util.cpp  tablet_util.hpp
src/util/: colorspaces.cpp  colorspaces.hpp  d2d_headers.hpp  d3d10_headers.hpp  random.cpp  random.h  string_utils.cpp  string_utils.hpp  win_headers.hpp
